syntax = "proto3";

option java_package = "com.ek.hedgehog.core.proto";
option optimize_for = SPEED;
option java_multiple_files = true;


enum MessageType {
	UNKNOW = 0;
	HEARTBEAT = 1;
	COMMON = 2;
	RPC = 3;
}

message TransformLog {
	
}

message BasicTransform {
	MessageType type = 1;
	int64 hashKey = 2;
	repeated TransformLog history = 3;
	bytes content = 4;
}

message RpcRequest {
	int64 rid = 1;
	
}

message RpcResponse {
	int64 rid = 1;
}

